--- a/1st-year-digital-materials/01-13-eigo-ganbare-spacedog/data/slide1.css
+++ b/1st-year-digital-materials/01-13-eigo-ganbare-spacedog/data/slide1.css
@@ -1,1 +1,1 @@
-#spr1_3bfcddf8 {clip:rect(0px,960px,540px,0px);}#txt0_3bfcddf8 {font-family:fnt6; font-size:96px; line-height:138px; font-weight:bold; color:#ffffff;}
+#spr1_7abe7df5 {clip:rect(0px,960px,540px,0px);}#txt0_7abe7df5 {font-family:fnt6; font-size:96px; line-height:138px; font-weight:bold; color:#ffffff;}
